# MemeInterpret

./: README.md  pyproject.toml
data/memeinterpret/: dev_data.json  test_data.json
scripts/: llava_mc_none.sh
src/: data_fhm.py  evaluate.py  finetune.py  prompt_arxiv.py  utils.py
